Fix alignment of output displays

--- a/src/components/surveys/Survey.css
+++ b/src/components/surveys/Survey.css
@@ -6,7 +6,16 @@
   padding: 30px min(200px, 7vw);
 }
 
-.survey-questions-submit-button-and-output-displays {
+.survey-questions-and-submit-button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  padding: 0 min(250px, 10vw);
+}
+
+.output-displays {
+  width: 45%;
   display: flex;
   flex-direction: column;
   justify-content: center;
